--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1,6 +1,72 @@
 
 /*index页面CSS*/
-
+.img_gallery
+{   width:100%;
+    position: relative;
+}
+.main_img
+{
+    overflow: hidden;
+    width: 100%;
+}
+.main_img ul li img{
+	width:100%;
+	height:100%;
+}
+.point
+{
+    position: absolute;
+    z-index: 15;
+    width: 60%;
+    left:40%;
+    margin-top:40%;  
+    list-style: none;
+    text-align: center;
+}
+.point a
+{
+    float: left;
+    width: 21px;
+    height: 21px;
+    margin: 0;
+    padding: 0;
+    text-indent: -1000px;
+    background: url('../img/btn_main_img.png') 0 0 no-repeat;
+    display: inline-block;
+    cursor: pointer;
+}
+.point a.on
+{
+    background-position: 0 -21px;
+}
+#btn_prev,
+#btn_next
+{
+    position: absolute;
+    z-index: 11111;
+    top: 50%;
+    display: block;
+    width: 50px;
+    height: 50px;
+    color:#FFF;
+    font-size:36px;
+}
+#btn_prev
+{
+    left: 5%;
+}
+#btn_next
+{
+    left:95%;
+}
+@media screen and (max-width: 500px) {
+#btn_prev,#btn_next{
+display:none;
+}	
+}
+.main{
+	margin-top:55%;
+}
 .classify{
 	 margin-top:20px;
 	 width:100%;
@@ -21,7 +87,7 @@
 	 }
 .show{
 	 width:100%;
-	 height:248px 
+	 min-height:248px; 
 	 }
 .img1{ 
      margin-left:10%;
@@ -29,11 +95,13 @@
 	 }
 .img2{
 	 margin-right:10%;
-	 float:right;}
+	 float:right;
+	 }
 .img1,.img2{
 	 width:35%;
-	 margin-top:10px;
-	 margin-bottom:20px;
+	 max-width:120px;
+	 margin-top:20px;
+	
 	 }
 .more{
 	 margin-top:30px;
@@ -167,3 +235,23 @@ a.btnright {
 	z-index:999;
 }
 	}
+	.pagination {
+  position: absolute;
+  left: 0;
+  text-align: center;
+  bottom:5px;
+  width: 100%;
+}
+.swiper-pagination-switch {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  background: #999;
+  box-shadow: 0px 1px 2px #555 inset;
+  margin: 0 3px;
+  cursor: pointer;
+}
+.swiper-active-switch {
+  background: #fff;
+}
