--- a/code-work/css/demo.css
+++ b/code-work/css/demo.css
@@ -156,16 +156,17 @@ display:none;
 	}
 .tabs{
 	width:100%;
-	height:80%;
+	height:85px;
 }
 .tabs img{
 	padding:5px 0 0 0;
 	width:50px;
-	height:75px;
+	height:80px;
+	margin-bottom:10px;
 	}
 .tabs a{
 	margin:0px;
-	height:80px;
+	height:85px;
 	padding:0px;
 	display:block;
 	float:left;
@@ -201,13 +202,17 @@ display:none;
 .swiper-container{
 	height:480px;
 	}
+.tabs{
+	width:100%;
+	height:95px;
+}
 .tabs img{
 	padding:5px 0 0 0;
 	width:70px;
 	height:90px;
 	}
 .tabs a{
-	height:90px;
+	height:95px;
 	}
 .btn{
 	display:block;
